--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Movie Finder by Year</title>
+    <title>Find similar Movies</title>
   </head>
   <body>
     <header>
-      <h1>Movie Finder by Year</h1>
+      <h1>Find Similar Movies</h1>
     </header>
 
     <main>
@@ -36,10 +36,13 @@
               background-color: rgb(89, 129, 211);
             "
           >
-            <h3 class="card-divider background-color: light-">Enter a Year</h3>
+            <h3 class="card-divider" style="background-color: green">
+              Enter a Movie Title
+            </h3>
             <div>
-              <input />
+              <input id="movie-title" />
               <button
+                id="search-button"
                 class="button float-right"
                 style="background-color: rgb(89, 129, 211)"
               >
@@ -51,14 +54,23 @@
           <div>
             <h2>Your Search Results:</h2>
           </div>
-          <div class=""></div>
+          <!-- Empty divs for movie searched and similar results-->
+          <div><img src="" id="movie-poster" /></div>
+          <div class="similar-movies"></div>
         </div>
       </div>
     </main>
+
+    <script
+      src="https://code.jquery.com/jquery-3.6.3.min.js"
+      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
       crossorigin="anonymous"
     ></script>
+
     <script src="./assets/js/script.js"></script>
   </body>
 
