--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
       </div>
 
       <div>
-        <h2>Your Search Results:</h2>
+        <div>
+          <h2 style="padding: 30px">Searched Movie:</h2>
+        </div>
+        <!-- Empty divs for movie searched poster and info and similar results poster and info-->
+        <div><img src="" id="movie-poster" /></div>
+        <div></div>
       </div>
-      <!-- Empty divs for movie searched and similar results-->
-      <div><img src="" id="movie-poster" /></div>
-      <div></div>
-      <div class="similar-movies"></div>
+
+      <div>
+        <h2 style="padding: 30px">Similar Movies:</h2>
+        <div class="similar-movies"></div>
+        <div></div>
+        <div></div>
+      </div>
     </main>
 
     <footer>
