Added code to display module for search results and created a local storage for the search history

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
       <div>
         <h2 style="padding: 30px">Similar Movies:</h2>
-        <div class="similar-movies"></div>
+        <div class="similar-movies">
+          <!-- img tags appended in script.js -->
+        </div>
         <div></div>
         <div></div>
       </div>
