--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <button id="search-button" class="button float-right">Search</button>
         </div>
       </div>
-
-      <div>
+      <!--Append .hidden to click event-->
+      <div class="hidden">
         <div>
           <h2 style="padding: 30px">Searched Movie:</h2>
         </div>
@@ -48,7 +48,7 @@
         <div></div>
       </div>
 
-      <div>
+      <div class="hidden">
         <h2 style="padding: 30px">Similar Movies:</h2>
         <div class="similar-movies"></div>
         <div></div>
