Added the description for the main search and an error message if the searched title is not found.

--- a/index.html
+++ b/index.html
@@ -40,21 +40,17 @@
       </div>
 
       <div>
-        <div>
-          <h2 style="padding: 30px">Searched Movie:</h2>
-        </div>
+        <h2 id="searched-header" style="padding: 30px"></h2>
         <!-- Empty divs for movie searched poster and info and similar results poster and info-->
         <div><img src="" id="movie-poster" /></div>
-        <div></div>
+        <div id="searched-description"></div>
       </div>
 
       <div>
-        <h2 style="padding: 30px">Similar Movies:</h2>
+        <h2 id="similar-header" style="padding: 30px"></h2>
         <div class="similar-movies">
           <!-- img tags appended in script.js -->
         </div>
-        <div></div>
-        <div></div>
       </div>
     </main>
 
