--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
         </div>
       </div>
 
+      <div
+        id="saved-searches"
+        class="column"
+        style="justify-content: right"
+      ></div>
+
       <div>
         <h2 id="searched-header" style="padding: 30px"></h2>
         <!-- Empty divs for movie searched poster and info and similar results poster and info-->
-        <div><img src="" id="movie-poster" /></div>
-        <div id="searched-description"></div>
+        <div class="column"><img src="" id="movie-poster" /></div>
+        <div class="column" id="searched-description"></div>
       </div>
 
       <div>
