new local storage code

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         style="justify-content: right"
       ></div>
 
-      <div>
-        <h2 id="searched-header" style="padding: 30px"></h2>
+      <div class="row">
+        <h2 class="column" id="searched-header" style="padding: 30px"></h2>
         <!-- Empty divs for movie searched poster and info and similar results poster and info-->
         <div class="column"><img src="" id="movie-poster" /></div>
         <div class="column" id="searched-description"></div>
